--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: #000;
 }
+body::-webkit-scrollbar{
+  display: none;
+}
 
 @layer utilities {
   .text-balance {
